--- a/medp285/index.css
+++ b/medp285/index.css
@@ -1,1 +1,88 @@
-hello
+head {
+    width: 100vw;
+}
+
+body {
+    background: linear-gradient(to bottom, #AFF1FF 0%, black 100%);
+	font-family: Helvetica, sans-serif;
+}
+
+nav {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	color: black;
+	background-color: rgba(0,0,0,0.8);
+	padding: 0px;
+	height: 2.5em;
+	z=index: 100;
+}
+
+nav a {
+	text-decoration: none;
+	color: white;
+}
+
+nav ul {
+	list-style-type: none;
+}
+
+nav ul li {
+	display: inline;
+	margin-top: 0;
+	padding-top: 0;
+	padding-left: 10px;
+	padding-right: 10px;
+	border-right: 1px dotted #999;
+}
+    
+nav ul li:last-child {
+	border-right: none;
+}
+
+nav h1 {
+    color: white;
+    background-color: rgba(0,0,0,0.8);
+}
+
+nav a:hover {
+	color: red;
+}
+
+#entertainment {
+	width: 100%;
+	height: 100%;
+}
+
+	/* CSS Dropdown Nav Elements */
+.dropdown {
+	cursor: pointer;
+	position: relative;
+	display: inline-block;
+}
+
+	/* hide dropdown content by default */
+.dropdown-content {
+	display: none; /* none hides the content */
+	position: absolute;
+	max-width: 100em;
+	background-color: #999;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.9);
+	z-index: 110;
+}
+
+	/* style links inside the dropdown */
+.dropdown-content a {
+	background-color: rgba(0,0,0,0.8);
+	color: white;
+	padding: .5em 2em .5em 1em;
+	text-decoration: none;
+	border-bottom: 1px solid gray;
+	display: block;
+}
+
+	/* show the dropdown on hover */
+	.dropdown:hover .dropdown-content {
+	display: block;
+}
