--- a/medp285/master.css
+++ b/medp285/master.css
@@ -1,3 +1,7 @@
+head {
+    width: 100vw;
+}
+
 body {
     background: linear-gradient(to bottom, #AFF1FF 0%, black 100%);
 	font-family: Helvetica, sans-serif;
@@ -50,7 +54,12 @@ nav li:hover {
 	color: red;
 }
 
-/* CSS Dropdown Nav Elements */
+#entertainment {
+	width: 100%;
+	height: 100%;
+}
+
+	/* CSS Dropdown Nav Elements */
 .dropdown {
 	cursor: pointer;
 	position: relative;
@@ -80,25 +89,4 @@ nav li:hover {
 	/* show the dropdown on hover */
 	.dropdown:hover .dropdown-content {
 	display: block;
-}
-
-.mySlides {display: none;}
-
-img {vertical-align: middle;}
-
-/* Slideshow container */
-.slideshow-container {
-    width: 100%;
-    margin: auto;
-}
-
-/* Fading animation */
-.fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
-
-@keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
 }
