--- a/medp285/typography.css
+++ b/medp285/typography.css
@@ -1,10 +1,59 @@
-head {
-    width: 100vw;
-}
-
 body {
     background: linear-gradient(to bottom, #AFF1FF 0%, black 100%);
-	font-family: Helvetica, sans-serif;
+    /* font properties */  
+    font-family: "Lucida Sans Unicode", Arial, sans-serif
+}
+
+p {
+    /* text properties */
+   line-height: 1.5em;
+   text-align: justify;
+}
+
+.bold{
+    font-weight: bold;
+    color: green;
+}
+
+#main {
+    /*width: 100vw;*/
+    height: 100vh;
+    /*position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 2em;
+    */
+    background-image: url("image/rushdie.gif");
+    background-position: center;
+    background-repeat: no-repeat;
+    /* background-color: #ffffff; */
+    /* background: linear-gradient(to bottom, orange 0%, red 100%); */
+}
+
+#play {
+    float: left;
+    width: 25vw;
+    height: 400px;
+    border: 1px solid;
+    padding: 2em;
+    background-color: red;
+}
+#play1{
+    float: right;
+    width: 25vw;
+    height: 400px;
+    border: 1px solid;
+    padding: 2em;
+    background-color: hsl(186, 100%, 91%);
+}
+#play2 {
+    clear: right;
+    width: 75vw;
+    height: 400px;
+    border: 1px solid;
+    padding: 2em;
+    background-color: rgba(0,255,0,.5);
 }
 
 nav {
@@ -12,11 +61,11 @@ nav {
 	top: 0px;
 	left: 0px;
 	width: 100%;
-	color: black;
+	color: white;
 	background-color: rgba(0,0,0,0.8);
 	padding: 0px;
 	height: 2.5em;
-	z=index: 100;
+	z-index: 100;
 }
 
 nav a {
@@ -50,12 +99,11 @@ nav a:hover {
 	color: red;
 }
 
-#entertainment {
-	width: 100%;
-	height: 100%;
+nav li:hover {
+	color: red;
 }
 
-	/* CSS Dropdown Nav Elements */
+/* CSS Dropdown Nav Elements */
 .dropdown {
 	cursor: pointer;
 	position: relative;
