--- a/medp285/grid.css
+++ b/medp285/grid.css
@@ -93,7 +93,8 @@ nav li:hover {
     grid-template-columns: repeat(2,1fr);
     grid-auto-columns: minmax(300px, auto);
     column-gap: 10px;
-    row-gap: 1em;
+    row-gap: 1em; 	
+    justify-content: : center;
 }
 
 .liquid {
@@ -103,6 +104,7 @@ nav li:hover {
     grid-template-columns: repeat(3,1fr);
     grid-auto-columns: minmax(300px, auto);
     column-gap: 10px;
+    justify-content: : center;
     row-gap: 1em;
 }
 
@@ -113,5 +115,6 @@ nav li:hover {
     grid-template-columns: repeat(2,1fr);
     grid-auto-columns: minmax(300px, auto);
     column-gap: 10px;
+    justify-content: : center;
     row-gap: 1em;
 }
