--- a/medp285/animation.css
+++ b/medp285/animation.css
@@ -1,6 +1,12 @@
+body {
+    background-color: black;
+}
+
 .svgimages {
-    height: 1052px;
-    width: 744px;
+    /*height: 1052px;
+    width: 744px;*/
+    width: 100%;
+    height: 100%;
     position: absolute;
     overflow: hidden;
 }
