Giving credit to my two class mate who contributed to our animation group effort

--- a/medp285/overallAnimation.css
+++ b/medp285/overallAnimation.css
@@ -1,3 +1,7 @@
+/* 
+    This is a group effort between 3 people, me (Yi Zong Kuang), Matthew Ko Carbonell, and Jungyun Jang.
+	We are part of Hunter College MEDP 285 Web Production course.
+ */
 body{
   background-color: black;
   color: #eaeaea;
