--- a/medp285/finalproject/maze.css
+++ b/medp285/finalproject/maze.css
@@ -2,3 +2,13 @@
     border: 2px solid #000;
     margin: 1em;
 }
+
+#playerList {
+    border: 2px solid #000;
+    margin: 1em;
+}
+
+#chatHistory {
+    border: 2px solid #000;
+    margin: 1em;
+}
