change map element: 0-empty space 1-wall

--- a/medp285/finalproject/maze.css
+++ b/medp285/finalproject/maze.css
@@ -12,3 +12,9 @@
     border: 2px solid #000;
     margin: 1em;
 }
+
+/* #gameViewPort {
+    display: grid;
+    grid-template-rows: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
+    grid-template-columns: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
+} */
