--- a/medp285/finalproject/maze.css
+++ b/medp285/finalproject/maze.css
@@ -13,8 +13,14 @@
     margin: 1em;
 }
 
-/* #gameViewPort {
-    display: grid;
-    grid-template-rows: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
-    grid-template-columns: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
-} */
+#gameViewPort {
+    
+}
+
+#map {
+    position : absolute;
+}
+
+#mapObjects {
+    position : absolute;
+}
