--- a/medp285/finalproject/maze.css
+++ b/medp285/finalproject/maze.css
@@ -8,9 +8,18 @@
     margin: 1em;
 }
 
+#chatLog {
+    border: 2px solid #000;
+    margin: 1em;
+    overflow-y: scroll;
+    height: 200px;
+}
+
 #chatHistory {
     border: 2px solid #000;
     margin: 1em;
+    overflow-y: scroll;
+    height: 200px;
 }
 
 #gameViewPort {
