--- a/medp285/finalproject/maze.css
+++ b/medp285/finalproject/maze.css
@@ -11,8 +11,17 @@
 #chatLog {
     border: 2px solid #000;
     margin: 1em;
+    margin-bottom: 0;
     overflow-y: scroll;
     height: 200px;
+}
+
+#chatInputBox {
+    border: 2px solid #000;
+    margin: 1em;
+    position: relative;
+    top: 0px;
+    
 }
 
 #chatHistory {
