--- a/medp285/finalproject/maze.css
+++ b/medp285/finalproject/maze.css
@@ -6,36 +6,58 @@
 #chatLogContainer{
     position: relative;
     border: 2px solid #000;
-    margin: 1em;
-    margin-bottom: 0;
+    margin-top: 1em;
+    margin-left: 1em;
+    margin-right: 1em;
+    margin-bottom: 1em;
     height: 200px;
 }
 
+#chatLogTitle {
+    position: relative;
+    margin: 0;
+    height:; 10%;
+}
+
 #chatLog {
+    position: relative;
     /* border: 2px solid #000; */
-    margin-bottom: 0;
+    margin: 0;
     overflow-y: scroll;
     height: 80%;
 }
 
 #chatInputBox {
+    position: relative;
     border: 2px solid #000;
     margin: 1em;
+    height: 10%;
+    /*top: 0px;*/
+
+}
+
+#chatHistryContainer {
     position: relative;
-    top: 0px;
+    border: 2px solid #000;
+    margin-top: 1em;
+    margin-left: 1em;
+    margin-right: 1em;
+    margin-bottom: 1em;
+    height: 200px;
 }
 
 #chatHistory {
     position: relative;
-    border: 2px solid #000;
-    margin: 1em;
+    border-top: 2px solid #000;
+    margin: 0;
     overflow-y: scroll;
-    height: 200px;
+    height: 80%;
 }
 
 #chatHistoryButton {
     position: relative;
-    top: 0;
+    margin: 0;
+    height: 20%;
 }
 
 #gameViewPort {
