--- a/medp285/finalproject/maze.css
+++ b/medp285/finalproject/maze.css
@@ -3,6 +3,50 @@
     margin: 1em;
 }
 
+#popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+
+#popupMsg {
+    background-color: white;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+#popupButtons {
+    position: relative;
+    width: 80%;
+    left: 10%;
+    color: #aaaaaa;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+#popupButtons:hover, #popupButtons:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#popupStay {
+    float: left;
+}
+
+#popupRestart {
+    float: right;
+}   
+
 #chatLogContainer{
     position: relative;
     border: 2px solid #000;
