added ray tracing and images to give it rendering

--- a/medp285/finalproject/maze.css
+++ b/medp285/finalproject/maze.css
@@ -104,6 +104,16 @@
     height: 20%;
 }
 
+
+
+#screen {
+    position: relative;
+    width: 320px;
+    height: 200px;
+    overflow: hidden;
+    border: 2px solid #000;
+}
+
 #gameViewPort {
     border: 2px solid #000;
 }
